# klarTeXt

./: .gitignore  Cargo.toml  LICENSE  README.md  test.txt
.github/workflows/: rust.yml
src/: ast.rs  differentiate.rs  disambiguate_fnapp.rs  error.rs  grammar.pest  io.rs  main.rs  parse.rs  predefined.rs  resolve_def.rs  simplify.rs  tests.rs  utils.rs
test/: package.tex  test1.tex
tex-test/: test1.tex
