[package]
name = "klartext"
version = "0.1.0"
edition = "2021"
author = "Julian Karrer"
about = "Interpreter for the klarTeXt language embedded in LaTeX."

[dependencies]
pest = "2.7.15"
pest_derive = "2.7.15"
ariadne = "0.5.1"
itertools = "0.14.0"
clap = { version = "4.5.34", features = ["derive"] }
peroxide = "0.39.3"
ordered-float = "5.0.0"